// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Builder (style 2) > should build  1`] = `
{
  "activities": {},
  "deployments": {
    "elements": {
      "dev": {
        "color": "primary",
        "description": null,
        "id": "dev",
        "kind": "env",
        "shape": "rectangle",
        "style": {
          "size": "lg",
        },
        "tags": null,
        "technology": null,
        "title": "dev",
      },
      "dev.local": {
        "color": "primary",
        "description": null,
        "id": "dev.local",
        "kind": "node",
        "shape": "rectangle",
        "style": {},
        "tags": null,
        "technology": null,
        "title": "local",
      },
      "prod": {
        "color": "primary",
        "description": null,
        "id": "prod",
        "kind": "env",
        "shape": "rectangle",
        "style": {
          "size": "lg",
        },
        "tags": null,
        "technology": null,
        "title": "prod",
      },
      "prod.eu": {
        "color": "primary",
        "description": null,
        "id": "prod.eu",
        "kind": "node",
        "shape": "rectangle",
        "style": {},
        "tags": null,
        "technology": null,
        "title": "eu",
      },
      "prod.eu.ui": {
        "element": "cloud.ui",
        "id": "prod.eu.ui",
      },
    },
    "relations": {},
  },
  "elements": {
    "cloud": {
      "color": "primary",
      "description": null,
      "id": "cloud",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {
        "size": "lg",
        "textSize": "sm",
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    "cloud.ui": {
      "color": "primary",
      "description": null,
      "id": "cloud.ui",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "ui",
    },
    "customer": {
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {
      "env": {
        "style": {
          "size": "lg",
        },
      },
      "node": {},
    },
    "elements": {
      "actor": {},
      "component": {},
      "system": {
        "style": {
          "size": "lg",
          "textSize": "sm",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "cloud": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "cloud",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "source": {
                "wildcard": true,
              },
              "target": {
                "ref": {
                  "model": "cloud",
                },
                "selector": "descendants",
              },
            },
          ],
        },
      ],
      "tags": null,
      "title": null,
      "viewOf": "cloud.ui",
    },
    "deployment": {
      "__": "deployment",
      "customColorDefinitions": {},
      "description": null,
      "id": "deployment",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "ref": {
                "deployment": "prod",
              },
              "selector": "descendants",
            },
          ],
        },
      ],
      "tags": null,
      "title": "Deployment",
    },
    "index": {
      "__": "element",
      "customColorDefinitions": {},
      "description": null,
      "id": "index",
      "links": null,
      "rules": [
        {
          "include": [
            {
              "ref": {
                "model": "cloud",
              },
              "selector": "children",
            },
          ],
        },
      ],
      "tags": null,
      "title": "Index",
    },
  },
}
`;

exports[`Builder (style 2) > should build activities 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [],
    },
    "s2#B": {
      "id": "s2#B",
      "modelRef": "s2",
      "name": "B",
      "steps": [],
    },
    "s2.c2#C": {
      "id": "s2.c2#C",
      "modelRef": "s2.c2",
      "name": "C",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s1.c1": {
      "color": "primary",
      "description": null,
      "id": "s1.c1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
    "s2.c2": {
      "color": "primary",
      "description": null,
      "id": "s2.c2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {
      "env": {
        "style": {
          "size": "lg",
        },
      },
      "node": {},
    },
    "elements": {
      "actor": {},
      "component": {},
      "system": {
        "style": {
          "size": "lg",
          "textSize": "sm",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style 2) > should build activities with steps (array) 1`] = `
{
  "activities": {
    "s2.c2#C": {
      "id": "s2.c2#C",
      "modelRef": "s2.c2",
      "name": "C",
      "steps": [
        {
          "id": "s2.c2#C_step1",
          "isBackward": false,
          "target": {
            "model": "s1.c1",
          },
        },
        {
          "id": "s2.c2#C_step2",
          "isBackward": true,
          "target": {
            "model": "s1.c1",
          },
        },
      ],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s1.c1": {
      "color": "primary",
      "description": null,
      "id": "s1.c1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
    "s2.c2": {
      "color": "primary",
      "description": null,
      "id": "s2.c2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "c2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {
      "env": {
        "style": {
          "size": "lg",
        },
      },
      "node": {},
    },
    "elements": {
      "actor": {},
      "component": {},
      "system": {
        "style": {
          "size": "lg",
          "textSize": "sm",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style 2) > should build activities with steps (object) 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [
        {
          "id": "s1#A_step1",
          "isBackward": false,
          "target": {
            "activity": "s2#B",
          },
          "title": "title1",
        },
        {
          "id": "s1#A_step2",
          "isBackward": true,
          "target": {
            "activity": "s2#B",
          },
          "title": "title2",
        },
      ],
    },
    "s2#B": {
      "id": "s2#B",
      "modelRef": "s2",
      "name": "B",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {
      "env": {
        "style": {
          "size": "lg",
        },
      },
      "node": {},
    },
    "elements": {
      "actor": {},
      "component": {},
      "system": {
        "style": {
          "size": "lg",
          "textSize": "sm",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style 2) > should build activities with steps (string array) 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [
        {
          "id": "s1#A_step1",
          "isBackward": false,
          "target": {
            "activity": "s2#B",
          },
        },
      ],
    },
    "s2#B": {
      "id": "s2#B",
      "modelRef": "s2",
      "name": "B",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
    "s2": {
      "color": "primary",
      "description": null,
      "id": "s2",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {
      "env": {
        "style": {
          "size": "lg",
        },
      },
      "node": {},
    },
    "elements": {
      "actor": {},
      "component": {},
      "system": {
        "style": {
          "size": "lg",
          "textSize": "sm",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (style 2) > should build activities with title 1`] = `
{
  "activities": {
    "s1#A": {
      "id": "s1#A",
      "modelRef": "s1",
      "name": "A",
      "steps": [],
      "title": "Title A",
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "s1": {
      "color": "primary",
      "description": null,
      "id": "s1",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "s1",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {
      "env": {
        "style": {
          "size": "lg",
        },
      },
      "node": {},
    },
    "elements": {
      "actor": {},
      "component": {},
      "system": {
        "style": {
          "size": "lg",
          "textSize": "sm",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;
